# Webb-Shell

./: .gitignore  README.md  install.fish  install.sh
cli/: README.md  install.sh  pyproject.toml
cli/completions/: webb.fish
cli/src/webb/: __init__.py  parser.py
cli/src/webb/data/schemes/tokyonight/medium/: dark.txt
cli/src/webb/data/templates/: gtk.css  pandora.json  qtct.conf  spicetify-dark.ini  spicetify-light.ini  thunar.css
cli/src/webb/subcommands/: __init__.py  clipboard.py  emoji.py  record.py  resizer.py  scheme.py  screenshot.py  shell.py  toggle.py  wallpaper.py
cli/src/webb/utils/: __init__.py  _webb_logging.py  colour.py  colourfulness.py  notify.py  paths.py  scheme.py  theme.py  version.py  wallpaper.py
cli/src/webb/utils/material/: __init__.py  generator.py
dotfiles/fish/: config.fish  fish_variables
dotfiles/hypr/: autostart.conf  env.conf  hyprland.conf  input.conf  keybinds.conf  look.conf  monitors.conf  programs.conf  windowrules.conf  workspaces.conf
dotfiles/kitty/: kitty.conf
dotfiles/matugen/: config.toml
dotfiles/nvim/: lazy-lock.json
dotfiles/starship/: starship.toml
dotfiles/tmux/: generated.conf  theme.conf  tmux-keybinds.conf  tmux.conf
dotfiles/webb/: cli.json  shell.json
dotfiles/yazi/: yazi.toml
shell/: CMakeLists.txt  shell.qml
shell/assets/: wrap_term_launch.sh
shell/config/: Config.qml  LauncherConfig.qml  ServiceConfig.qml
shell/modules/: BatteryMonitor.qml  IdleMonitors.qml  Shortcuts.qml
shell/plugin/: CMakeLists.txt
shell/scripts/: webb-keybinds-convert
shell/services/: Audio.qml  (+10 more)
(+112 files in other folders)
